底部导航栏及一些跳转到次级页面

--- a/HaoChiBao/app/src/main/res/layout/activity_home_viewpager.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_home_viewpager.xml
@@ -22,7 +22,6 @@
         android:id="@+id/home_viewpager_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
         android:orientation="horizontal">
         <RadioButton
             android:id="@+id/home_btn"
@@ -32,7 +31,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:drawablePadding="5dp"
+            android:drawablePadding="4dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="4dp"
             android:textColor="@color/mainRed"
             android:drawableTop="@drawable/home_radiubutton_sytle"
             android:text="@string/shouye"/>
@@ -43,7 +44,9 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
+            android:drawablePadding="4dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="4dp"
             android:textColor="@color/textBlack"
             android:drawableTop="@drawable/discover_checkbox_style"
             android:text="@string/faxian"/>
@@ -54,7 +57,9 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
+            android:drawablePadding="4dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="4dp"
             android:textColor="@color/textBlack"
             android:drawableTop="@drawable/mine_checkbox_style"
             android:text="@string/mine"/>
