--- a/HaoChiBao/app/src/main/res/drawable/tuijian_left_red.xml
+++ b/HaoChiBao/app/src/main/res/drawable/tuijian_left_red.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<corners android:bottomRightRadius="5dp"
-    android:topRightRadius="5dp"/>
+<corners android:topLeftRadius="20dp"
+    android:bottomLeftRadius="20dp"/>
     <solid android:color="@color/mainRed"/>
     <stroke android:color="@color/white"
         android:width="1dp"/>
