--- a/HaoChiBao/app/src/main/res/layout/activity_tuijian_lv.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_tuijian_lv.xml
@@ -2,61 +2,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/borderGray"
+    android:background="@color/white"
     android:orientation="vertical">
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/mainRed">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:src="@mipmap/left_arrow_white" />
-
-        <LinearLayout
+        android:layout_height="wrap_content"
+        android:background="@color/mainRed"
+        android:padding="10dp">
+       <ImageView
+           android:id="@+id/back_btn"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:src="@mipmap/left_arrow_white"
+           android:layout_centerVertical="true"
+           android:padding="10dp"/>
+        <RadioGroup
+            android:id="@+id/push_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="horizontal">
-
-            <TextView
+            <RadioButton
+                android:id="@+id/app_push"
+                android:button="@null"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/tuijian"
+                android:checked="true"
+                android:background="@drawable/tuijian_left_selector"
                 android:gravity="center"
                 android:text="好吃宝推荐"
+                android:padding="5dp"
                 android:textColor="@color/mainRed"
                 android:textSize="@dimen/font_36" />
-
-            <TextView
+            <RadioButton
+                android:id="@+id/mine_push"
+                android:button="@null"
+                android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/tuijian_two"
+                android:checked="false"
+                android:background="@drawable/tuijian_right_selector"
                 android:gravity="center"
                 android:text="我要推荐"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_36" />
-        </LinearLayout>
-
+        </RadioGroup>
         <TextView
+            android:id="@+id/search_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_margin="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/tuijian_three"
             android:padding="5dp"
             android:text="搜索"
             android:textColor="@color/mainRed"
             android:textSize="@dimen/font_36" />
-
     </RelativeLayout>
-
     <ListView
-        android:id="@+id/item"
+        android:dividerHeight="0dp"
+        android:id="@+id/push_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent">
+    </ListView>
 </LinearLayout>
