--- a/HaoChiBao/app/src/main/res/layout/activity_tuijian_lv_item_app.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_tuijian_lv_item_app.xml
@@ -7,19 +7,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/mine_recommend_left_item"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/white"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/food_img"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="124.5dp"
                 android:src="@mipmap/my_beauty_photo"
                 android:scaleType="fitXY"/>
             <TextView
+                android:id="@+id/food_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="香菜丸子"
@@ -31,41 +33,46 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <RatingBar
+                    android:id="@+id/food_grade"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/roomRatingBar"
                     android:numStars="5"
                     android:rating="4.5"
                     android:layout_marginTop="5dp"/>
-                <ImageView
+                <CheckBox
+                    android:button="@null"
+                    android:id="@+id/zan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/recommended_praise"
+                    android:background="@drawable/zan_selector"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"/>
                 <TextView
+                    android:id="@+id/zan_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="30人推荐"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"/>
-
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/mine_recommend_right_item"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/white"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/food_img1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="124.5dp"
                 android:src="@mipmap/my_beauty_photo"
                 android:scaleType="fitXY"/>
             <TextView
+                android:id="@+id/food_name1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="香菜丸子"
@@ -77,25 +84,28 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <RatingBar
+                    android:id="@+id/food_grade1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/roomRatingBar"
                     android:numStars="5"
                     android:rating="4.5"
                     android:layout_marginTop="5dp"/>
-                <ImageView
+                <CheckBox
+                    android:button="@null"
+                    android:id="@+id/zan1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/recommended_praise"
+                    android:background="@drawable/zan_selector"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"/>
                 <TextView
+                    android:id="@+id/zan_number1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="30人推荐"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"/>
-
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
