--- a/HaoChiBao/app/src/main/res/layout/activity_hotel.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_hotel.xml
@@ -7,44 +7,25 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusableInTouchMode="true"
-        android:touchscreenBlocksFocus="true"
-        android:background="@color/mainRed">
+        android:background="@color/mainRed"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="12dp"
+            android:src="@mipmap/left_arrow_white" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:drawablePadding="5dp"
-            android:drawableRight="@mipmap/home_sw_resize"
-            android:text="@string/cq"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_centerVertical="true"/>
-
-        <EditText
-            android:layout_width="190dp"
-            android:layout_height="30dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/bg_top_edit"
-            android:hint="@string/homepage_edittext"
-            android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingRight="20dp"
-            android:paddingTop="5dp"
-            android:textSize="@dimen/font_24"
-            android:textColorHint="@color/borderGray" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="12dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/weather"
+            android:text="@string/jiudian"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="@dimen/font_36" />
+
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
