--- a/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
@@ -9,41 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/mainRed"
-        android:focusableInTouchMode="true">
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="16dp"
-            android:drawablePadding="5dp"
-            android:drawableRight="@mipmap/home_sw_resize"
-            android:text="@string/cq"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="12dp"
+            android:src="@mipmap/left_arrow_white" />
 
-        <EditText
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@drawable/home_page_edittext"
-            android:hint="@string/homepage_edittext"
-            android:paddingBottom="5dp"
-            android:paddingRight="20dp"
-            android:paddingTop="5dp"
-            android:textColorHint="@color/borderGray" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/weather"
+            android:text="@string/tuijian"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="@dimen/font_36" />
+
     </RelativeLayout>
 
     <LinearLayout
