--- a/HaoChiBao/app/src/main/res/layout/activity_find_lv.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_find_lv.xml
@@ -4,58 +4,70 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:background="@color/mainRed">
-
         <TextView
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableRight="@mipmap/home_sw_resize"
-            android:padding="20dp"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
             android:text="重庆"
             android:textColor="@color/white"
             android:textSize="@dimen/font_36" />
-
-        <LinearLayout
+        <RadioGroup
+            android:id="@+id/group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tex1"
+            <RadioButton
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:id="@+id/news"
+                android:button="@null"
+                android:checked="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/find"
+                android:background="@drawable/tuijian_left_selector"
                 android:gravity="center"
                 android:text="最新"
                 android:textColor="@color/mainRed"
                 android:textSize="@dimen/font_36" />
 
-            <TextView
+            <RadioButton
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="20dp"
+                android:id="@+id/attention"
+                android:button="@null"
+                android:checked="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/tex1"
-                android:background="@drawable/find_two"
+                android:background="@drawable/tuijian_right_selector"
                 android:gravity="center"
                 android:text="关注"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_36" />
-        </LinearLayout>
-
+        </RadioGroup>
         <ImageView
+            android:id="@+id/share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:padding="20dp"
             android:src="@mipmap/particulars_share" />
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/find_list"
+        android:id="@+id/find_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
