--- a/HaoChiBao/app/src/main/res/layout/activity_find_lv_attention_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_find_lv_attention_item.xml
@@ -9,8 +9,8 @@
         android:layout_marginTop="10dp">
         <ImageView
             android:id="@+id/user_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@mipmap/my_head_portrait"
             android:padding="10dp"
             android:layout_centerVertical="true"
