--- a/HaoChiBao/app/src/main/res/layout/activity_register.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_register.xml
@@ -30,7 +30,7 @@
                     android:layout_below="@+id/user_img"
                     android:gravity="center"
                     android:text="好吃宝"
-                    android:textSize="@dimen/font_48"
+                    android:textSize="@dimen/font_40"
                     android:textColor="@color/textBlack"/>
                 <TextView
                     android:id="@+id/more_login"
@@ -59,6 +59,7 @@
                         android:drawablePadding="10dp"
                         android:textColorHint="@color/textGray"
                         android:inputType="number"
+                        android:textSize="@dimen/font_28"
                         android:maxLength="11"
                         />
                     <EditText
@@ -68,10 +69,12 @@
                         android:layout_height="40dp"
                         android:drawableLeft="@mipmap/my_lock"
                         android:hint="密码:"
+                        android:textSize="@dimen/font_28"
                         android:drawablePadding="10dp"
                         android:textColorHint="@color/textGray"
                         android:inputType="textPassword"
                         />
+
                     <TextView
                         android:id="@+id/forget_password"
                         android:layout_marginTop="15dp"
@@ -79,7 +82,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="忘记密码"
-                        android:textColor="@color/textGray"
+                        android:textColor="@color/textGrayBlack"
                         android:layout_gravity="right"
                         android:layout_marginRight="10dp"/>
                 </LinearLayout>
@@ -94,19 +97,21 @@
                 android:layout_marginTop="80dp"
                 android:gravity="center"
                 android:text="登陆"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:layout_gravity="center"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginLeft="40dp"
-                android:textSize="@dimen/font_48"
+                android:textSize="@dimen/font_36"
                 android:textColor="@color/white"/>
+
             <RelativeLayout
                 android:layout_marginTop="40dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp">
+                android:layout_marginLeft="40dp"
+                android:layout_marginBottom="20dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
