--- a/HaoChiBao/app/src/main/res/layout/activity_parking.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_parking.xml
@@ -13,6 +13,7 @@
         android:paddingTop="16dp">
 
         <ImageView
+            android:id="@+id/img_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
