--- a/HaoChiBao/app/src/main/res/layout/activity_seekhelp.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_seekhelp.xml
@@ -17,6 +17,7 @@
             android:paddingTop="16dp">
 
             <ImageView
+                android:id="@+id/img_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
