--- a/HaoChiBao/app/src/main/res/layout/activity_entertainment.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_entertainment.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true"
         android:touchscreenBlocksFocus="true"
+
         android:background="@color/mainRed">
 
         <TextView
@@ -16,6 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:drawablePadding="5dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             android:drawableRight="@mipmap/home_sw_resize"
             android:text="@string/cq"
             android:textColor="@color/white"
@@ -29,9 +32,6 @@
             android:background="@drawable/bg_top_edit"
             android:hint="@string/homepage_edittext"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingRight="20dp"
-            android:paddingTop="5dp"
             android:textSize="@dimen/font_24"
             android:textColorHint="@color/borderGray" />
 
@@ -39,10 +39,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="12dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="12dp"
+            android:padding="10dp"
             android:text="@string/weather"
+            android:layout_centerVertical="true"
             android:textColor="@color/white"
             android:textSize="16sp" />
     </RelativeLayout>
