--- a/HaoChiBao/app/src/main/res/layout/activity_hotel.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_hotel.xml
@@ -11,16 +11,14 @@
         android:touchscreenBlocksFocus="true"
         android:background="@color/mainRed">
 
-        <TextView
+        <ImageView
+            android:id="@+id/img_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:drawablePadding="5dp"
-            android:drawableRight="@mipmap/home_sw_resize"
-            android:text="@string/cq"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_centerVertical="true"/>
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:src="@mipmap/left_arrow_white" />
 
         <EditText
             android:layout_width="190dp"
@@ -28,8 +26,8 @@
             android:layout_centerInParent="true"
             android:background="@drawable/bg_top_edit"
             android:hint="@string/homepage_edittext"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:textSize="@dimen/font_24"
             android:textColorHint="@color/borderGray" />
