--- a/HaoChiBao/app/src/main/res/layout/activity_shoping.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_shoping.xml
@@ -11,16 +11,13 @@
         android:touchscreenBlocksFocus="true"
         android:background="@color/mainRed">
 
-        <TextView
+        <ImageView
+            android:id="@+id/img_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:drawablePadding="5dp"
-            android:drawableRight="@mipmap/home_sw_resize"
-            android:text="@string/cq"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_centerVertical="true"/>
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="12dp"
+            android:src="@mipmap/left_arrow_white" />
 
         <EditText
             android:layout_width="190dp"
