--- a/HaoChiBao/app/src/main/res/layout/activity_find_lv_attention_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_find_lv_attention_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="骚逼"
+            android:text="小丸子"
             android:textSize="@dimen/font_36"
             android:textColor="@color/textBlack"
             android:layout_centerInParent="true"/>
