--- a/HaoChiBao/app/src/main/res/layout/activity_tuijian_lv.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_tuijian_lv.xml
@@ -18,15 +18,14 @@
            android:padding="10dp"/>
         <RadioGroup
             android:id="@+id/push_group"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="horizontal">
             <RadioButton
-                android:layout_weight="1"
                 android:id="@+id/app_push"
                 android:button="@null"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:background="@drawable/tuijian_left_selector"
@@ -34,7 +33,7 @@
                 android:text="好吃宝推荐"
                 android:padding="5dp"
                 android:textColor="@color/mainRed"
-                android:textSize="@dimen/font_36" />
+                android:textSize="@dimen/font_32" />
             <RadioButton
                 android:layout_weight="1"
                 android:id="@+id/mine_push"
@@ -47,7 +46,7 @@
                 android:gravity="center"
                 android:text="我要推荐"
                 android:textColor="@color/white"
-                android:textSize="@dimen/font_36" />
+                android:textSize="@dimen/font_32" />
         </RadioGroup>
         <TextView
             android:id="@+id/search_btn"
@@ -60,7 +59,7 @@
             android:padding="5dp"
             android:text="搜索"
             android:textColor="@color/mainRed"
-            android:textSize="@dimen/font_36" />
+            android:textSize="@dimen/font_32" />
     </RelativeLayout>
     <ListView
         android:dividerHeight="0dp"
