--- a/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <!--顶部导航栏-->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/mainRed"
+        android:orientation="horizontal"
         android:focusableInTouchMode="true"
         >
 
@@ -23,30 +24,32 @@
             android:drawableRight="@mipmap/home_sw_resize"
             android:text="@string/cq"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="@dimen/font_40" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/home_page_edittext"
             android:hint="@string/homepage_edittext"
+            android:textSize="@dimen/font_32"
             android:paddingBottom="5dp"
-            android:paddingRight="20dp"
             android:paddingTop="5dp"
             android:textColorHint="@color/borderGray" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="12dp"
             android:layout_marginTop="16dp"
             android:text="@string/weather"
+            android:layout_marginLeft="20dp"
             android:textColor="@color/white"
-            android:textSize="16sp" />
-    </RelativeLayout>
+            android:textSize="@dimen/font_36" />
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
