--- a/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
@@ -13,6 +13,7 @@
         android:paddingTop="16dp">
 
         <ImageView
+            android:id="@+id/img_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -214,45 +215,4 @@
 
     </ListView>
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="@color/bgGrayWhite"-->
-    <!--android:orientation="vertical">-->
-
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="2dp"-->
-    <!--android:background="@color/lineGray" />-->
-
-    <!--<RelativeLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="17dp"-->
-    <!--android:layout_marginBottom="3dp"-->
-    <!--android:orientation="horizontal">-->
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginLeft="50dp"-->
-    <!--android:drawableTop="@mipmap/home_location"-->
-    <!--android:text="@string/shouye" />-->
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_centerInParent="true"-->
-    <!--android:drawableTop="@mipmap/discover"-->
-    <!--android:text="@string/faxian" />-->
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_marginRight="50dp"-->
-    <!--android:drawableTop="@mipmap/my"-->
-    <!--android:text="@string/mine" />-->
-    <!--</RelativeLayout>-->
-    <!--</LinearLayout>-->
 </LinearLayout>
